--- a/vignettes/geometry-tables_demand-read.Rmd
+++ b/vignettes/geometry-tables_demand-read.Rmd
@@ -13,7 +13,7 @@ Another vignette in this package sent us a file.
 
 ```{r,eval=FALSE}
 library(dplyr)
-db <- src_sqlite("maps_county.sqlite3", create = FALSE)
+db <- src_sqlite("data-raw/maps_county.sqlite3", create = FALSE)
 db
 ```
 
@@ -24,3 +24,61 @@ tbl(db, "geom")
 
 tbl(db, "metadata")
 ```
+
+
+Let's choose "wyoming", with "big horn" and "johnson". 
+
+```{r,eval=FALSE}
+meta <- tbl(db, "metadata")
+
+meta %>% filter(state == "wyoming", county %in% c("big horn", "johnson")) %>% 
+  select(county, group) %>% inner_join(tbl(db, "geom"))
+```
+
+Now we have something we can work with. 
+
+## Read on-demand
+
+```{r,eval=FALSE}
+ggplot(
+  meta %>% filter(state == "wyoming", county %in% c("big horn", "johnson")) %>% 
+  select(county, group) %>% inner_join(tbl(db, "geom")) %>% 
+    collect()
+  
+) + aes(x = long, y = lat, group = subregion, fill = subregion) + geom_polygon()
+```
+
+I'm interested now in the entire state. 
+
+```{r,eval=FALSE}
+ggplot(
+  meta %>% filter(state == "wyoming") %>% 
+  select(county, group) %>% inner_join(tbl(db, "geom")) %>% 
+    collect() %>% group_by(subregion) %>% mutate(labx = mean(long), laby = mean(lat))
+  
+) + aes(x = long, y = lat, group = subregion, fill = subregion, label = subregion) + geom_polygon() + geom_path() + geom_text(aes(x = labx, y = laby)) +  
+  scale_fill_grey(start = 0.3, guide = FALSE)
+```
+
+
+So, we have succesfully plotted our subset of polygons from a generic database containing two tables. 
+
+Can we go the full distance and create a Spatial object? 
+
+```{r,eval=FALSE}
+library(spbabel)
+  tbl(db, "metadata") %>% filter(state == "wyoming") %>% 
+  select(county, group) %>% inner_join(tbl(db, "geom")) %>% 
+    collect() %>% transmute(x_ = long, y_ = lat, branch_ = group, object_ = group, order_ = row_number(), island_ = TRUE, county = subregion, state = region) %>% sp(crs = "+proj=longlat +ellps=WGS84")
+
+```
+
+
+Obviously there's a lot of wasted coordinates here, so hopefully our friend figures out a more efficient storage in the db . . .
+
+Show how the two tables may be combined, with nesting. 
+
+
+## Simple features from normalized tables (mostly topology)
+
+
