--- a/README.Rmd
+++ b/README.Rmd
@@ -117,6 +117,7 @@ We can tidy this up by encoding the geometry data into a geometry-column, into n
 I want these things, and spbabel is the right compromise for where to start: 
 
 * flexibility in the number and type/s of attribute stored as "coordinates", x, y, lon, lat, z, time, temperature, etc.
+* ability to store attributes on parts (!) i.e. the state is the object, the county is the part
 * shared vertices
 * ability to store points, lines and areas together, sharing topology where appropriate
 * provide a flexible basis for conversion between other formats.
@@ -124,6 +125,8 @@ I want these things, and spbabel is the right compromise for where to start:
 * integration with database engines and other systems
 * integration with D3 via htmlwidgets, with shiny, and with gggeom ggvis or similar
 * data-flow with dplyr piping as the engine behind a D3 web interface
+
+Flexibility in attributes generally is the key to breaking out of traditional GIS constraints that don't allow clear continuous / discrete distinctions, or time-varying objects/events, 3D/4D geometry, or clarity on topology versus geometry. When everything is tables this becomes natural, and we can build structures like link-relations between tables that transfer data only when required. 
 
 The ability to use [Manifold System](http://www.georeference.org/doc/manifold.htm) seamlessly with R is a particular long-term goal, and this will be best done(TM) via dplyr "back-ending". 
 
