lift to the scaffold

--- a/README.Rmd
+++ b/README.Rmd
@@ -130,3 +130,6 @@ Flexibility in attributes generally is the key to breaking out of traditional GI
 
 The ability to use [Manifold System](http://www.georeference.org/doc/manifold.htm) seamlessly with R is a particular long-term goal, and this will be best done(TM) via dplyr "back-ending". 
 
+
+
+Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
